# detect-duplicates

./: Cargo.toml  README.md
src/: copies.rs  duplicates.rs  lib.rs  main.rs  paths.rs
