[package]
name = "detect-duplicates"
version = "0.1.2"
edition = "2021"
description = "Detects and reports duplicate files in a file system"
license = "MIT"
homepage = "https://github.com/kpberry/detect-duplicates"

[[bin]]
path = "src/main.rs"
name = "detect-duplicates"

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }