[package]
name = "detect-duplicates"
version = "0.2.1"
edition = "2021"
description = "Detects and reports duplicate files in a file system"
license = "MIT"
homepage = "https://github.com/kpberry/detect-duplicates"
documentation = "https://docs.rs/detect-duplicates"

[lib]
path = "src/lib.rs"
name = "duplicates"

[[bin]]
path = "src/main.rs"
name = "detect-duplicates"

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
colored = { version = "2.2.0" }